metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/MIIncidentUpdateHistory__c.object-meta.xml
<CustomObject>
    <description>Custom object to store records related to status, ownership, and other property changes on an MI Incident.</description>
    <label>MI Incident Update History</label>
    <nameField>
        <displayFormat>MIH-{000000}</displayFormat>
        <label>MI Incident Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MI Incident Update History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>