metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <description>The amount of time (in hours) spent in the given status.</description>
    <formula>(ToDate__c - FromDate__c)*24</formula>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>