metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>DurationSeconds__c</fullName>
    <description>The amount of time (in seconds) spent in the given status.</description>
    <formula>(ToDate__c - FromDate__c)*86400</formula>
    <label>Duration (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>