metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>