metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/MIIncident__c.field-meta.xml
<CustomField>
    <fullName>MIIncident__c</fullName>
    <description>Master-detail to the MI Incident object.</description>
    <label>MI Incident</label>
    <referenceTo>MIIncident__c</referenceTo>
    <relationshipLabel>MI Incident Update History</relationshipLabel>
    <relationshipName>MI_Incident_Update_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>