metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/MIIncidentAgent__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentAgent__c</fullName>
    <description>The MI Incident agent at the time of the MI Incident Update History record being created.</description>
    <label>MI Incident Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>