metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/MIIncidentPreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentPreviousStatus__c</fullName>
    <description>The previous status that the MI Incident was in prior to the status change.</description>
    <label>MI Incident Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>