metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/MIIncidentStatus__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentStatus__c</fullName>
    <description>A stamp of the MI Incident Status at the time the MI Incident Update History record was created.</description>
    <label>MI Incident Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>