metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>