metadata-sfdx/force-app/main/default/objects/MIIncidentUpdateHistory__c/recordTypes/MIIncidentUpdateHistory.recordType-meta.xml
<RecordType>
    <fullName>MIIncidentUpdateHistory</fullName>
    <active>true</active>
    <description>Record type used for MI Incident update history records.</description>
    <label>MI Incident Update History</label>
</RecordType>